tests/paczka1/fuzzy1/53824175.err
Error in line 2: t0Dwsru S627 15,4
Error in line 4: t0Dwsru S524 70,5
Error in line 6: rS3 S497 39,4
Error in line 25: zGC7 S524 4X,1
Error in line 22: zGC7 S497 34,8
